04-lection2/01-histogram/histogram.css
.container {
    
}

.histogram {
    height: 185px;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    /* Rectangle */
    background: var(--white);
    /* Gray 3 */
    border: 1px solid var(--grey-3);
    box-sizing: border-box;
    border-radius: 8px;
    padding: 26px;
    padding-top: 16px;
    padding-bottom: 24px;
    flex-direction: column;
}

.histogram__header {
    
}

.histogram__header-firstrow {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

.histogram__title {
    /* p */
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;

    /* Black */
    color: var(--black);

    opacity: 0.8;
}

.histogram__link {
    /* p */
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 16px;
    line-height: 24px;
    /* identical to box height, or 150% */
    text-align: right;

    color: var(--light-blue);

}

.histogram__amount {
    padding-top: 6px;
    /* h4 */
    font-family: 'Inter';
    font-style: normal;
    font-weight: 400;
    font-size: 20px;
    line-height: 26px;
    /* identical to box height, or 130% */
    /* Black */
    color: var(--black);

}

.histogram__data {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-end;
    height: 50px;
}

.histogram__data> div:nth-child(1n) {
    /* block color*/
    background-color: var(--light-blue);
    flex-grow: 1;
    border: solid 1px var(--white);
}

